# learn-pandas-runoob

./: 00_hello.ipynb  01_series.ipynb  02_dataframe.ipynb  03_read_csv.ipynb  04_read_json.ipynb  05_clean_data.ipynb  06_common_used_functions.ipynb  README.md  nested_deep.json  nested_list.json  nested_mix.json  output.xlsx  pyproject.toml
