[tool.poetry]
name = "learn-pandas"
version = "0.1.0"
description = ""
authors = ["msme-heww <he.wei@email.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
glom = "^23.5.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
lxml = "^5.3.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
